--- a/src/app/user/my-trips/my-trips.component.html
+++ b/src/app/user/my-trips/my-trips.component.html
@@ -1,25 +1,34 @@
 <div class="container">
-  
+
   <div class="header profile-wrapper">
-    <h2 >My Trips</h2>
+    <h2>My Trips</h2>
     <p class="text">Here you can see all the trips you've been to</p>
   </div>
 
   <div *ngIf="!weHaveTrips" class="d-flex justify-content-center">Sorry! There is no trips to show</div>
   <div *ngFor="let trip of allMyTrips">
 
-      <div class="col-12 col-sm-10 col-md-6 col-lg-6 mt-4">
+    <div *ngIf="allMyTrips.length > 1" class="col-12 col-sm-10 col-md-6 col-lg-6 mt-4">
 
-          <div class="card ">
-            <div class="card-body">
+      <div class="card ">
+        <div class="card-body">
 
-              <h5 class="d-flex justify-content-center trip-name"  routerLink="/trip-details/{{trip.id}}">{{trip.tripName}}</h5>
+          <h5 class="d-flex justify-content-center trip-name" routerLink="/trip-details/{{trip.id}}">{{trip.tripName}}</h5>
 
-            </div>
-          </div>
-    
         </div>
-   
+      </div>
+
+    </div>
+    <div *ngIf="allMyTrips.length == 1" class="col-12 ">
+      <div class="card ">
+        <div class="card-body">
+
+          <h5 class="d-flex justify-content-center trip-name" routerLink="/trip-details/{{trip.id}}">{{trip.tripName}}</h5>
+
+        </div>
+      </div>
+
+    </div>
   </div>
-  
+
 </div>
