--- a/src/app/user/view-country-posts/view-country-posts.component.html
+++ b/src/app/user/view-country-posts/view-country-posts.component.html
@@ -12,6 +12,7 @@
         <br>
     </div>
 
+    <div *ngIf="loading" class="spinner"></div>
     <div >
         <div  id="chartdiv"></div>
     </div>
