--- a/src/app/user/view-country-posts/view-country-posts.component.scss
+++ b/src/app/user/view-country-posts/view-country-posts.component.scss
@@ -1,6 +1,7 @@
 @import '~scss/profile';
 @import '~scss/posts';
 @import '~scss/userProfile';
+@import '~scss/spinner';
 
 #chartdiv {
     width: 100%;
