--- a/src/app/user/post/post.component.html
+++ b/src/app/user/post/post.component.html
@@ -17,7 +17,7 @@
         </div>
         <div class="alert alert-warning alert-morning-modified" *ngIf="tripMessageDisplay">{{tripMessageDisplayed}}</div>
         <div class="alert alert-danger alert-morning-modified" *ngIf="errorTripMessageDisplay">{{tripMessageDisplayed}}</div>
-        
+
         <form [formGroup]='tripForm'>
             <div class="form-group">
                 <input type="text" class="form-control" placeholder="* My trip to England, Hiking Trails, Scoutish ..." formControlName="tripName"
@@ -39,114 +39,108 @@
     <div *ngIf="showNewPost" class="animated fadeInRight">
         <div class="alert alert-warning alert-morning-modified" *ngIf="postMessageDisplay">{{postMessageDisplayed}}</div>
         <div class="alert alert-danger alert-morning-modified" *ngIf="errorPostMessageDisplay">{{postMessageDisplayed}}</div>
-        
-        <div class="d-flex justify-content-end choose">
-            <div class="btn-group" dropdown>
-                <a dropdownToggle class="btn btn-default mr-auto p-2 dropdown-toggle">
-                   * Related trip:
-                    <b>{{this.selectedTrip.name}}</b>
-                    <span class="caret"></span>
+
+        <div *ngIf="loading" class="spinner"></div>
+        <div *ngIf="!loading">
+            <div class="d-flex justify-content-end choose">
+                <div class="btn-group" dropdown>
+                    <a dropdownToggle class="btn btn-default mr-auto p-2 dropdown-toggle">
+                        * Related trip:
+                        <b>{{this.selectedTrip.name}}</b>
+                        <span class="caret"></span>
+                    </a>
+                    <ul *dropdownMenu class="dropdown-menu" role="menu">
+                        <li *ngFor="let choice of relatedTrips" (click)="chooseATrip(choice)">
+                            <a class="dropdown-item">{{choice.name}}</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <a class="ml-auto p-2 plus choose" (click)="newTrip()">
+                    <i class="fas fa-plus"></i> New trip
                 </a>
-                <ul *dropdownMenu class="dropdown-menu" role="menu">
-                    <li *ngFor="let choice of relatedTrips" (click)="chooseATrip(choice)">
-                        <a class="dropdown-item">{{choice.name}}</a>
-                    </li>
-                </ul>
             </div>
 
-            <a class="ml-auto p-2 plus choose" (click)="newTrip()">
-                <i class="fas fa-plus"></i> New trip
-            </a>
-        </div>
+            <div>
+                Location:
+            </div>
+            <agm-map [latitude]="lat" [longitude]="lng" style="height: 260px;" (mapClick)="onChoseLocation($event)">
+                <agm-marker [latitude]="lat" [longitude]="lng" *ngIf="locationChosen">
+                </agm-marker>
+            </agm-map>
 
-        <div>
-            Location:
-        </div>
-        <agm-map [latitude]="lat" [longitude]="lng" style="height: 260px;" (mapClick)="onChoseLocation($event)">
-            <agm-marker [latitude]="lat" [longitude]="lng" *ngIf="locationChosen">
-            </agm-marker>
-        </agm-map>
-
-        <div class="about-post">
-            <form [formGroup]='postForm'>
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Your location" formControlName="location" />
-                </div>
-                <div class="form-group">
+            <div class="about-post">
+                <form [formGroup]='postForm'>
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Your location" formControlName="location" />
+                    </div>
+                    <div class="form-group">
                         <input type="text" class="form-control" placeholder="Your City" formControlName="city" />
                     </div>
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="* Name your post" formControlName="postName" />
-                </div>
-
-                <div class="form-group">
-                    <textarea type="text" rows="4" class="form-control" placeholder="* What's going on here?" formControlName="postDetails"></textarea>
-                </div>
-
-                <div *ngIf="isPrivatePrivacy">
                     <div class="form-group">
-                        EURO
-                        <input type="number" class="form-control" placeholder="Buget" formControlName="buget" /> 
+                        <input type="text" class="form-control" placeholder="* Name your post" formControlName="postName" />
                     </div>
-                    <div class="form-group">
-                        <textarea type="text" rows="2" class="form-control" placeholder="Other thoughts" formControlName="otherToughts"></textarea>
-                    </div>
-                </div>
-            </form>
-        </div>
 
-        <div *ngFor="let itemUrl of urlArray ; let i = index">
-            <div class="container">
-                <i class="far fa-times-circle deletePicture" (click)="removePhoto(i)" title="Delete"></i>
-                <div class="thumbnail d-flex align-items-center justify-content-center arrayOfImage">
-                    <img [src]=itemUrl class="photo">
-                </div>
+                    <div class="form-group">
+                        <textarea type="text" rows="4" class="form-control" placeholder="* What's going on here?" formControlName="postDetails"></textarea>
+                    </div>
+                    <div>In order to offer you statistics about your trip please input your buget.This information will be private and can be viewed just by you.</div>
+                    <br>
+                    <div *ngIf="isPrivatePrivacy">
+                        <div class="form-group">
+                            EURO
+                            <input type="number" class="form-control" placeholder="Buget" formControlName="buget" />
+                        </div>
+                        <div class="form-group">
+                            <textarea type="text" rows="2" class="form-control" placeholder="Other thoughts" formControlName="otherToughts"></textarea>
+                        </div>
+                        <br>
+                    </div>
+                </form>
             </div>
 
+            <div class="row">
+                <div *ngFor="let itemUrl of urlArray ; let i = index">
+                    <div class="container col-sm-4">
+                        <i class="far fa-times-circle deletePicture" (click)="removePhoto(i)" title="Delete"></i>
+                        <div class="thumbnail d-flex align-items-center justify-content-center arrayOfImage">
+                            <img [src]=itemUrl class="photo">
+                        </div>
+                    </div>
+    
+                </div>
+            </div>
+            
+            <input id="file-input" class="inputPhotos" type="file" (change)="onSelectFile($event)" />
+            <div class="d-flex  about-post row">
+                <label for="file-input">
+                    <a [class.nr-photo]="this.addPhotoDisableButton" class=" mr-auto p-2 choose">
+                        <i class="fas fa-plus"></i> Add photos (max. 4)
+                    </a>
+                </label>
+
+                <select [(ngModel)]="object" class="selectpicker show-tick p-2  col-sm-4 ml-auto choose  form-control" #selectElem (change)="setPrivacy(selectElem.value)">
+                    <option value="privacy">Privacy</option>
+                    <option value="public"> PUBLIC </option>
+                    <option value="private"> PRIVATE </option>
+                </select>
+
+
+            </div>
         </div>
-        <input id="file-input" class="inputPhotos" type="file" (change)="onSelectFile($event)" />
-        <div class="d-flex justify-content-start about-post row">
-            <label for="file-input">
-                <a [class.nr-photo]="this.addPhotoDisableButton" class="p-2 choose">
-                    <i class="fas fa-plus"></i> Add photos (max. 4)
-                </a>
-            </label>
-            <!-- <div class="btn-group" dropdown [dropup]="true">
-                <a dropdownToggle class="p-2 choose dropdown-toggle">
-                    <i class="fas fa-unlock-alt"></i> Privacy
-                    <span class="caret"></span>
-                </a>
-                <ul *dropdownMenu class="dropdown-menu" role="menu">
-                    <li role="menuitem">
-                        <a class="dropdown-item">Public</a>
-                    </li>
-                    <li role="menuitem">
-                        <a class="dropdown-item">Private</a>
-                    </li>
-                </ul>
-            </div> -->
 
-            <!-- <i class="fas fa-unlock-alt"></i> Privacy -->
-            <select [(ngModel)]="object" class="selectpicker show-tick p-2 choose col-md-4" #selectElem (change)="setPrivacy(selectElem.value)">
-                <option value="privacy">Privacy</option>
-                <option value="public"> PUBLIC </option>
-                <option value="private"> PRIVATE </option>
-            </select>
-
-
-        </div>
     </div>
 
 </div>
 <div class="modal-footer">
     <div *ngIf="showNewTrip">
         <button type="button" class="btn btn-default" (click)="postModal.hide()">Close</button>
-        <button type="button" class="btn btn-default create-button"  [ngClass]="tripForm.status=='INVALID'?'disabled':null" (click)="createTrip()">Create</button>
+        <button type="button" class="btn btn-default create-button" [ngClass]="tripForm.status=='INVALID'?'disabled':null" (click)="createTrip()">Create</button>
     </div>
 
     <div *ngIf="showNewPost">
 
-        <button *ngIf = "!this.isSelectedPost" type="button" class="btn btn-default create-button" (click)="createPost()">Post</button>
-        <button *ngIf = " this.isSelectedPost" type="button" class="btn btn-default create-button" (click)="updatePost()">Update</button>
+        <button *ngIf="!this.isSelectedPost" type="button" class="btn btn-default create-button" (click)="createPost()">Post</button>
+        <button *ngIf=" this.isSelectedPost" type="button" class="btn btn-default create-button" (click)="updatePost()">Update</button>
     </div>
 </div>
