--- a/src/app/user/trip-details/trip-details.component.html
+++ b/src/app/user/trip-details/trip-details.component.html
@@ -36,6 +36,7 @@
     </div>
 
     <!-- Chart -->
+    <div *ngIf="loading" class="spinner"></div>
     <div *ngIf="totalBugetThisTrip != 0" id="chartdiv"></div>
 
     <div class="name-wrapper d-flex justify-content-center">
@@ -363,7 +364,7 @@
 
 <ng-template #deleteTrip>
     <div class="modal-body text-center">
-        <p>Are you sure you want to delete this trip?</p>
+        <p>Are you sure you want to delete this trip? All posts will also be deleted</p>
         <button type="button" class="btn btn-default" (click)="confirmDeleteTrip()">Yes</button>
         <button type="button" class="btn btn-primary" (click)="decline()">No</button>
     </div>
