--- a/src/app/user/view-user-profile/view-user-profile.component.html
+++ b/src/app/user/view-user-profile/view-user-profile.component.html
@@ -1,8 +1,9 @@
-<top-menu></top-menu>
+<top-menu *ngIf="userObject.role !== 'admin'"></top-menu>
+<top-menu-admin *ngIf="userObject.role === 'admin'"></top-menu-admin>
 
 <!--Scroll to top-->
-<div *ngIf ="{'show-scroll': navIsFixed}" class="scroll-to-top" [ngClass]="{'show-scroll': navIsFixed}">
-    <button class = "scroll-top-button" (click)="scrollToTop()">
+<div *ngIf="{'show-scroll': navIsFixed}" class="scroll-to-top" [ngClass]="{'show-scroll': navIsFixed}">
+    <button class="scroll-top-button" (click)="scrollToTop()">
         <i class="fas fa-arrow-up"></i>
     </button>
 </div>
@@ -126,7 +127,7 @@
                                         </a>
                                     </div>
                                     <div *ngIf="userObject.role === 'admin'" class="d-flex justify-content-end">
-                                        <a class="p-2 warning-post" title="Warning Post" (click)="openModalWarning(warningModal, post.id, post.aboutLocation.countryShort)">
+                                        <a class="p-2 warning-post" title="Warning Post" (click)="openModalPostWarning(warningPostModal, post)">
                                             <i class="fas fa-exclamation"></i>
                                         </a>
                                         <a class="p-2 delete-post" title="Delete Post" (click)="openModal(template, post.id, post.aboutLocation.countryShort)">
@@ -182,9 +183,15 @@
                                                     <div class="col-sm d-flex justify-content-start com-text">
                                                         {{comment.commentText}}
                                                     </div>
-                                                    <a *ngIf="userObject.role === 'admin'" class="col-sm d-flex justify-content-end warning-post" title="Warning Comment" (click)="openModalWarning(warningModal, post.id, post.aboutLocation.countryShort)">
-                                                        <i class="fas fa-exclamation"></i>
-                                                    </a>
+                                                    <div *ngIf="userObject.role === 'admin'" class="col-sm d-flex justify-content-end">
+                                                        <a class="p-2 warning-post" title="Warning Comment" (click)="openModalCommentWarning(warningCommentModal, comment, post, comment.id)">
+                                                            <i class="fas fa-exclamation"></i>
+                                                        </a>
+                                                        <a class="p-2 delete-post" title="Delete Comment" (click)="openDeleteComm(deleteCommentModal, comment.id)">
+                                                                <i class="far fa-trash-alt"></i>
+                                                        </a>
+                                                    </div>
+
                                                 </div>
 
                                             </div>
@@ -225,5 +232,46 @@
             <p>Are you sure you want to delete this user?</p>
             <button type="button" class="btn btn-default" (click)="confirmDeleteUser()">Yes</button>
             <button type="button" class="btn btn-primary" (click)="decline()">No</button>
+        </div>
+    </ng-template>
+
+    <ng-template #deleteCommentModal>
+        <div class="modal-body text-center">
+            <p>Are you sure you want to delete this comment?</p>
+            <button type="button" class="btn btn-default" (click)="confirmDeleteComment()">Yes</button>
+            <button type="button" class="btn btn-primary" (click)="decline()">No</button>
+        </div>
+    </ng-template>
+
+
+    <ng-template #warningPostModal>
+        <div class="modal-body text-center">
+            <p>What is the problem with this post? Noticed to the user</p>
+            <div *ngIf="warnPostMess" class="alert alert-warning">
+                {{warnPostText}}
+            </div>
+            <form [formGroup]='writePostWarnning'>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Write" formControlName="postWarnText" />
+                </div>
+            </form>
+            <button type="button" class="btn btn-default" (click)="confirmPostWarning(writePostWarnning.value)">Sent</button>
+            <button type="button" class="btn btn-primary" (click)="decline()">Discard</button>
+        </div>
+    </ng-template>
+
+    <ng-template #warningCommentModal>
+        <div class="modal-body text-center">
+            <p>What is the problem with this comment? Noticed to the user</p>
+            <div *ngIf="warnCommMess" class="alert alert-warning">
+                {{warnCommText}}
+            </div>
+            <form [formGroup]='writeCommentWarnning'>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Write" formControlName="commWarnText" />
+                </div>
+            </form>
+            <button type="button" class="btn btn-default" (click)="confirmCommentWarning(writeCommentWarnning.value)">Sent</button>
+            <button type="button" class="btn btn-primary" (click)="decline()">Discard</button>
         </div>
     </ng-template>
