--- a/src/scss/spinner.scss
+++ b/src/scss/spinner.scss
@@ -20,3 +20,21 @@
     0% {transform:rotate(0deg);}
     100% {transform:rotate(360deg);} 
   }
+
+.spinner_login{
+  width: 70px;
+  height:70px;
+  border-radius:70px;
+  box-sizing:border-box;
+  border:2px groove black;
+  position:absolute;
+  left:40%;
+  top: 100%;
+  margin:-16px 0px 0px -16px;
+  border-top-color:rgb(0, 0, 0);
+  border-left-color:rgba(0, 0, 0, 0.822);
+  border-bottom-color:rgba(0, 0, 0, 0.719);
+  border-right-color:rgba(0, 0, 0, 0.527);
+  animation: rotate 1000ms infinite linear;
+  transform:translateZ(0px);
+}
