--- a/src/app/user/find-friends/find-friends.component.html
+++ b/src/app/user/find-friends/find-friends.component.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="card-footer">
-          <small class="text-muted">Visited 3 countries</small>
+          <small class="text-muted">Visited  {{person.countriesVisited.length}} countries</small>
         </div>
       </div>
 
