--- a/src/app/user/top-menu/top-menu.component.scss
+++ b/src/app/user/top-menu/top-menu.component.scss
@@ -9,3 +9,13 @@
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
 }
+
+.style-bell{
+    color: white!important;
+    font-size: 14px!important;
+  
+}
+
+.clicked-notif{
+    background-color: white;
+}
