--- a/src/app/user/news/news.component.html
+++ b/src/app/user/news/news.component.html
@@ -1,5 +1,5 @@
 <!-- <div class="text-wrapp"> -->
-<div detect-scroll (onScroll)="handleScroll($event)" [bottomOffset]="50000" [topOffset]="0" >
+<div >
   <div class="header profile-wrapper">
     <div class="text-wrapp"> Here are the posts from the people you are following.</div>
   </div>
@@ -25,7 +25,7 @@
     <ks-modal-gallery [id]="11" [modalImages]="imagesToDisplay" [plainGalleryConfig]="customPlainGalleryRowConfig"></ks-modal-gallery>
     <div class="search-results">
 
-      <div *ngFor="let post of listPosts" class="post-container">
+      <div *ngFor="let post of miniListPosts" class="post-container">
 
         <div class="container">
           <!-- Card Flip -->
@@ -151,7 +151,10 @@
 
 
       </div>
-    </div>
+      <div class="d-flex justify-content-center">
+          <button class= "btn btn-warning " *ngIf = "listPosts.length > newLimit && listPosts.length != 0" (click)= "morePosts()">MORE</button>
+      </div>
+         </div>
 
   </div>
 </div>
