--- a/src/scss/posts.scss
+++ b/src/scss/posts.scss
@@ -145,7 +145,10 @@
 
 .front {
   z-index: 2;
- 
+  overflow: auto;
+  overflow-x:hidden;
+  overflow-y: scroll;
+  
   background-color: #FBFFFE;
   -webkit-transform: rotateY(0deg);
           transform: rotateY(0deg);
